# School-C

./: .gitignore  CMakeLists.txt  vektoren.c  wurfel.c
02Automaten/: nZahlenAutomat.c
03StackArray/: rechner.c  stack.h  stack_array.c  stack_struct.c  udp_rechner.c  wurfel.c
04Fork/: erste_fork.c  fork_wait.c  primZahl.c
05Matrix/: bakterien.c  drehmatrix.c  main.c  matrix.h
06Pipe/: Pipesss.c  pipeSystem.c
07Redundanz/: codierung.c  generator.c  generator.txt
08Rekursion/: fibonacci.h  rekursive_fibonacci.c
09Schichtenmodell/: dataheader.h  firstLayer.c  physikheader.h  secondLayer.c
10Shell/: shell_main.c
11UART_Schichtenmodell/: datalinkLayer.h  makefile  networkLayer.c  physikalLayer.c  physikalLayer.h
12Threads/: threads0.c  threads1.c  threads2.c
14Vektoren/: vektoren.c  vektoren.h
14Vektoren/schieferwurf/schieferwurf_struct/: schieferwurf.c  vektor_struct.c
15SMTP/: smtp-client.c
Erste Programme/: rechner.c  stack.h  stack_array.c  stack_struct.c  udp_rechner.c
Fork/: erste_fork.c  fork_wait.c
Redundanz/: codierung.c  generator.c  hammingcode.c
Schichtenmodell/: allelayer.h  firstLayer.c  makefile  secondLayer.c  test.txt  thirdLayer.c
UART_Schichtenmodell/: datalinkLayer.c
Ubung00/: ForkExercise.c
Ubung02/: crcr_hashcode.c
arithmetik/: arithmetik.c
automaten/: 101automat.c  nZahlenAutomat.c
idea/: workspace.xml
matrix/: bakterien.c  main.c  matrix.h
prufung/: prufung_plan.c
rekursiv/: fibonacci.h  rekursive_fibonacci.c
shell/: shell_main.c
vektoren_tp/: vektoren.c  vektoren.h
(+2 files in other folders)
