# cmake_minimum_required(VERSION <specify CMake version here>)
project(C_Projects C)

set(CMAKE_C_STANDARD 99)

add_executable(main matrix/main.c)
add_executable(rechner "Erste Programme/rechner.c")
add_executable(wurfel "Erste Programme/wurfel.c")
add_executable(stack_array "Erste Programme/stack_array.c")
add_executable(stack_struct "Erste Programme/stack_struct.c")
add_executable(udp_rechner "Erste Programme/udp_rechner.c")
add_executable(prufung_plan prufung/prufung_plan.c)
add_executable(argc_argv argc_argc/argc_argv.c)
add_executable(rekursive_fibonacci rekursiv/rekursive_fibonacci.c)

add_executable(101automat automaten/101automat.c)
add_executable(nZahlenAutomat automaten/nZahlenAutomat.c)
add_executable(generator Redundanz/generator.c)
add_executable(codierung Redundanz/codierung.c)
add_executable(matrix matrix/matrix.h)
add_executable(bakterien matrix/bakterien.c)
add_executable(shell_main shell/shell_main.c)